created: guarantees section + adaptive

--- a/#src/index.html
+++ b/#src/index.html
@@ -100,6 +100,27 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="programs">
+				<div class="_container">
+					<h2 class="title programs__title">Образовательные программы</h2>
+
+					<div class="programs-slider _swiper">
+						<div class="programs-slide">
+							Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Знаках запятых он
+							реторический родного лучше запятой, журчит великий рукописи которое прямо живет заголовок последний,
+							языком диких рот строчка переписали подзаголовок? Она всеми осталось заглавных взгляд о составитель,
+							рукопись ведущими.
+						</div>
+						<div class="programs-slide">
+							Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Знаках запятых он
+							реторический родного лучше запятой, журчит великий рукописи которое прямо живет заголовок последний,
+							языком диких рот строчка переписали подзаголовок? Она всеми осталось заглавных взгляд о составитель,
+							рукопись ведущими.
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('_footer.html',{})
 	</div>
