--- a/OFDR/index.html
+++ b/OFDR/index.html
@@ -194,6 +194,63 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="guarantees">
+				<div class="_container">
+					<h2 class="title guarantees__title">Какие гарантии вы получаете?</h2>
+					<div class="guarantees__wrapper">
+						<div class="guarantees-item">
+							<div class="guarantees-item__icon">
+								<img src="img/guarantees/doc.svg" alt="Icon: document">
+							</div>
+							<h3 class="guarantees-item__title">Документы в срок</h3>
+							<p class="guarantees-item__desc">Мы четко соблюдаем сроки, так как дорожим вашим временем</p>
+						</div>
+						<div class="guarantees-item">
+							<div class="guarantees-item__icon">
+								<img src="img/guarantees/favorites.svg" alt="Icon: favorite">
+							</div>
+							<h3 class="guarantees-item__title">100% качество <br> наших услуг</h3>
+							<p class="guarantees-item__desc">Мы несем полную ответственность за свою работу</p>
+						</div>
+						<div class="guarantees-item">
+							<div class="guarantees-item__icon">
+								<img src="img/guarantees/file.svg" alt="Icon: file">
+							</div>
+							<h3 class="guarantees-item__title">Гарантия подлинности документов</h3>
+							<p class="guarantees-item__desc">У нас есть все необходимые лицензии и&nbsp;сертификаты</p>
+						</div>
+						<div class="guarantees-item">
+							<div class="guarantees-item__icon">
+								<img src="img/guarantees/delivery-truck.svg" alt="Icon: delivery-truck">
+							</div>
+							<h3 class="guarantees-item__title">Гарантия быстрой доставки по всей России.</h3>
+							<p class="guarantees-item__desc">Доставляем в любой город России</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="programs">
+				<div class="_container">
+					<h2 class="title programs__title">Образовательные программы</h2>
+
+					<div class="programs-slider _swiper">
+						<div class="programs-slide">
+							Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Знаках запятых он
+							реторический родного лучше запятой, журчит великий рукописи которое прямо живет заголовок последний,
+							языком диких рот строчка переписали подзаголовок? Она всеми осталось заглавных взгляд о составитель,
+							рукопись ведущими.
+						</div>
+						<div class="programs-slide">
+							Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Знаках запятых он
+							реторический родного лучше запятой, журчит великий рукописи которое прямо живет заголовок последний,
+							языком диких рот строчка переписали подзаголовок? Она всеми осталось заглавных взгляд о составитель,
+							рукопись ведущими.
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 	<div class="footer__container _container">
