created: sections programs and sertificate + adap

--- a/#src/index.html
+++ b/#src/index.html
@@ -104,20 +104,65 @@
 			<section class="programs">
 				<div class="_container">
 					<h2 class="title programs__title">Образовательные программы</h2>
-
 					<div class="programs-slider _swiper">
-						<div class="programs-slide">
-							Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Знаках запятых он
-							реторический родного лучше запятой, журчит великий рукописи которое прямо живет заголовок последний,
-							языком диких рот строчка переписали подзаголовок? Она всеми осталось заглавных взгляд о составитель,
-							рукопись ведущими.
+						<!-- Slides -->
+						<div class="swiper-slide programs-slide">
+							<img src="img/programs/program-1.jpg" alt="icon: program" class="programs-slide__img">
+							<h3 class="programs-slide__title">Пожарно-технический минимум (учреждения-офисы, организации)</h3>
+							<span class="programs-slide__group">Группа открыта</span>
+							<span class="programs-slide__price">от 2500 руб.</span>
 						</div>
-						<div class="programs-slide">
-							Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Знаках запятых он
-							реторический родного лучше запятой, журчит великий рукописи которое прямо живет заголовок последний,
-							языком диких рот строчка переписали подзаголовок? Она всеми осталось заглавных взгляд о составитель,
-							рукопись ведущими.
+						<div class="swiper-slide programs-slide">
+							<img src="img/programs/program-2.jpg" alt="icon: program" class="programs-slide__img">
+							<h3 class="programs-slide__title"> Учебно-строительный минимум (учреждения-офисы, организации)</h3>
+							<span class="programs-slide__group">Группа открыта</span>
+							<span class="programs-slide__price">от 2000 руб.</span>
 						</div>
+						<div class="swiper-slide programs-slide">
+							<img src="img/programs/program-3.jpg" alt="icon: program" class="programs-slide__img">
+							<h3 class="programs-slide__title">Грузо-подьемный минимум (учреждения, леса, организации)</h3>
+							<span class="programs-slide__group">Группа открыта</span>
+							<span class="programs-slide__price">от 4200 руб.</span>
+						</div>
+						<div class="swiper-slide programs-slide">
+							<img src="img/programs/program-4.jpg" alt="icon: program" class="programs-slide__img">
+							<h3 class="programs-slide__title">Железо-пооизводящий минимум (учреждения, организации, заводы)</h3>
+							<span class="programs-slide__group">Группа открыта</span>
+							<span class="programs-slide__price">от 3800 руб.</span>
+						</div>
+						<div class="swiper-slide programs-slide">
+							<img src="img/programs/program-3.jpg" alt="icon: program" class="programs-slide__img">
+							<h3 class="programs-slide__title">Грузо-подьемный минимум (учреждения, леса, организации)</h3>
+							<span class="programs-slide__group">Группа открыта</span>
+							<span class="programs-slide__price">от 4200 руб.</span>
+						</div>
+					</div>
+					<!-- If we need pagination -->
+					<div class="slider-quality__pagging"></div>
+				</div>
+			</section>
+
+			<section class="sertificate">
+				<div class="_container">
+					<h2 class="title sertificate__title">Примеры допусков и сертификатов</h2>
+
+					<div class="sertificate__wrapper">
+						<div class="sertificate-slider _swiper">
+							<div class="swiper-slide sertificate-slide">
+								<img src="img/sertificate/sertificate-1.jpg" alt="Image: sertificate" class="sertificate-slide__img">
+							</div>
+							<div class="swiper-slide sertificate-slide">
+								<img src="img/sertificate/sertificate-2.jpg" alt="Image: sertificate" class="sertificate-slide__img">
+							</div>
+							<div class="swiper-slide sertificate-slide">
+								<img src="img/sertificate/sertificate-3.jpg" alt="Image: sertificate" class="sertificate-slide__img">
+							</div>
+							<div class="swiper-slide sertificate-slide">
+								<img src="img/sertificate/sertificate-4.jpg" alt="Image: sertificate" class="sertificate-slide__img">
+							</div>
+						</div>
+						<div class="sertificate__arrow sertificate__arrow_prev"></div>
+						<div class="sertificate__arrow sertificate__arrow_next"></div>
 					</div>
 				</div>
 			</section>
