--- a/#src/index.html
+++ b/#src/index.html
@@ -166,6 +166,37 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="news">
+				<div class="_container">
+					<h2 class="title news__title">Новости и акции</h2>
+					<div class="news__wrapper">
+						<div class="news-stock">
+							<div class="news-stock__body">
+								<h3 class="news-stock__title">Получи в подарок удостоверение абсолютно <span>бесплатно</span></h3>
+								<p class="news-stock__decs">каждое 5-е удостоверение мы выдаем в подарок. Акция рассчитана на
+									единовременное оформление от 5 и более удостоверений</p>
+							</div>
+							<div class="news-stock__img">
+								<img src="img/news/stock.png" alt="Image: stock">
+							</div>
+						</div>
+						<div class="news-item">
+							<img src="img/news/news-1.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">02.03.2019</span>
+							<h3 class="news-item__title">Изменения в системе гражданской обороны</h3>
+							<p class="news-item__desc">Государство планирует реализовать значительные улучшения в сфере…</p>
+						</div>
+						<div class="news-item news-item_second">
+							<img src="img/news/news-2.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">03.03.2019</span>
+							<h3 class="news-item__title">Строители планируют построение здания</h3>
+							<p class="news-item__desc">Государственные сторителт планируют построение новых зданий ближе к…</p>
+						</div>
+					</div>
+					<div class="news__btn">Все новости</div>
+				</div>
+			</section>
 		</main>
 		@@include('_footer.html',{})
 	</div>
