--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,5 +1,70 @@
 <footer class="footer">
 	<div class="footer__container _container">
-
+		<div class="footer__wrapper">
+			<div class="footer-services">
+				<h3 class="footer__title">Страницы с услугами</h3>
+				<ul class="footer-list">
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Основные сведения</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Структура и органы управления образовательной организацией</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Документы</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Образование</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Руководство</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Персональный состав педагогических работников</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer-menu">
+				<h3 class="footer__title">Меню сайта</h3>
+				<ul class="footer-list">
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Вакантные места для приема (перевода)</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Сотрудники</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Об Учебном комбинате</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Отзывы</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Реквизиты</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Отчеты АО «Учебный комбинат»</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer-contacts">
+				<h3 class="footer__title">Напишите нам</h3>
+				<div class="footer-contacts__wrapper">
+					<div class="footer-contacts__social">
+						<a href="#" class="footer-contacts__link footer-contacts__link_telegram" target="_blank">telegram_name</a>
+						<a href="#" class="footer-contacts__link footer-contacts__link_viber" target="_blank">viber_name</a>
+						<a href="#" class="footer-contacts__link footer-contacts__link_whatsapp" target="_blank">whatsapp_name</a>
+					</div>
+					<div class="footer-contacts__contact">
+						<a href="tel:88000000000" class="footer-contacts__phone">8 800 000-00-00</a>
+						<a href="mailto:email@email.com" class="footer-contacts__email">email@email.com</a>
+						<a href="https://kasper-developer.ru" class="footer-contacts__site" target="_blank">Сайт разработан: kasper&nbsp;-&nbsp;developer.ru</a>
+					</div>
+					<button class="btn footer-contacts__btn">Обратный звонок</button>
+				</div>
+			</div>
+		</div>
+		<div class="footer__divider"></div>
+		<div class="footer__copyright">Copyright 2021. Все права защищены</div>
 	</div>
 </footer>
