created: animation for main page

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<div class="footer__container _container">
 		<div class="footer__wrapper">
-			<div class="footer-services">
+			<div class="footer-services" data-aos="fade-right" data-aos-delay="200">
 				<h3 class="footer__title">Страницы с услугами</h3>
 				<ul class="footer-list">
 					<li class="footer-list__item">
@@ -24,7 +24,7 @@
 					</li>
 				</ul>
 			</div>
-			<div class="footer-menu">
+			<div class="footer-menu" data-aos="fade-right" data-aos-delay="300">
 				<h3 class="footer__title">Меню сайта</h3>
 				<ul class="footer-list">
 					<li class="footer-list__item">
@@ -47,7 +47,7 @@
 					</li>
 				</ul>
 			</div>
-			<div class="footer-contacts">
+			<div class="footer-contacts" data-aos="fade-right" data-aos-delay="400">
 				<h3 class="footer__title">Напишите нам</h3>
 				<div class="footer-contacts__wrapper">
 					<div class="footer-contacts__social">
