--- a/#src/index.html
+++ b/#src/index.html
@@ -10,54 +10,54 @@
 		<main class="page">
 			<section class="documents">
 				<div class="_container">
-					<h2 class="title documents__title">Какие документы хотите оформить?</h2>
+					<h2 class="title documents__title" data-aos="zoom-in" data-aos-delay="200">Какие документы хотите оформить?</h2>
 
 					<div class="documents__wrapper">
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="200">
 							<img src="img/documents/fireman.svg" alt="Icon: fireman" class="documents-item__icon">
 							<h3 class="documents-item__title">Гражданская оборона и ЧС</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="250">
 							<img src="img/documents/crane.svg" alt="Icon: crane" class="documents-item__icon">
 							<h3 class="documents-item__title">Работы на <br> высоте</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="300">
 							<img src="img/documents/excavator.svg" alt="Icon: excavator" class="documents-item__icon">
 							<h3 class="documents-item__title">Дорожно-строительная техника</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="350">
 							<img src="img/documents/settings.svg" alt="Icon: settings" class="documents-item__icon">
 							<h3 class="documents-item__title">Неразрушающий контроль</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="400">
 							<img src="img/documents/toxic-waste.svg" alt="Icon: toxic-waste" class="documents-item__icon">
 							<h3 class="documents-item__title">Опасные грузы (ДОПОГ)</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="450">
 							<img src="img/documents/worker.svg" alt="Icon: worker" class="documents-item__icon">
 							<h3 class="documents-item__title">Охрана труда</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="500">
 							<img src="img/documents/fire-extinguisher.svg" alt="Icon: fire-extinguisher" class="documents-item__icon">
 							<h3 class="documents-item__title">Пожарно-технический минимум</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="550">
 							<img src="img/documents/factory.svg" alt="Icon: factory" class="documents-item__icon">
 							<h3 class="documents-item__title">Промышленная безопасность</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="600">
 							<img src="img/documents/engineer.svg" alt="Icon: engineer" class="documents-item__icon">
 							<h3 class="documents-item__title">Обучение по рабочим профессиям</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="650">
 							<img src="img/documents/plug.svg" alt="Icon: plug" class="documents-item__icon">
 							<h3 class="documents-item__title">Энергетическая безопасность</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="700">
 							<img src="img/documents/curve.svg" alt="Icon: curve" class="documents-item__icon">
 							<h3 class="documents-item__title">Безопасность дорожного движения</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="750">
 							<img src="img/documents/tracktor.svg" alt="Icon: tracktor" class="documents-item__icon">
 							<h3 class="documents-item__title">Права на спецтехнику</h3>
 						</div>
@@ -67,30 +67,30 @@
 
 			<section class="guarantees">
 				<div class="_container">
-					<h2 class="title guarantees__title">Какие гарантии вы получаете?</h2>
+					<h2 class="title guarantees__title" data-aos="zoom-in" data-aos-delay="200">Какие гарантии вы получаете?</h2>
 					<div class="guarantees__wrapper">
-						<div class="guarantees-item">
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="200">
 							<div class="guarantees-item__icon">
 								<img src="img/guarantees/doc.svg" alt="Icon: document">
 							</div>
 							<h3 class="guarantees-item__title">Документы в срок</h3>
 							<p class="guarantees-item__desc">Мы четко соблюдаем сроки, так как дорожим вашим временем</p>
 						</div>
-						<div class="guarantees-item">
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="300">
 							<div class="guarantees-item__icon">
 								<img src="img/guarantees/favorites.svg" alt="Icon: favorite">
 							</div>
 							<h3 class="guarantees-item__title">100% качество <br> наших услуг</h3>
 							<p class="guarantees-item__desc">Мы несем полную ответственность за свою работу</p>
 						</div>
-						<div class="guarantees-item">
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="400">
 							<div class="guarantees-item__icon">
 								<img src="img/guarantees/file.svg" alt="Icon: file">
 							</div>
 							<h3 class="guarantees-item__title">Гарантия подлинности документов</h3>
 							<p class="guarantees-item__desc">У нас есть все необходимые лицензии и&nbsp;сертификаты</p>
 						</div>
-						<div class="guarantees-item">
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="500">
 							<div class="guarantees-item__icon">
 								<img src="img/guarantees/delivery-truck.svg" alt="Icon: delivery-truck">
 							</div>
@@ -103,8 +103,8 @@
 
 			<section class="programs">
 				<div class="_container">
-					<h2 class="title programs__title">Образовательные программы</h2>
-					<div class="programs-slider _swiper">
+					<h2 class="title programs__title" data-aos="zoom-in" data-aos-delay="200">Образовательные программы</h2>
+					<div class="programs-slider _swiper" data-aos="zoom-in" data-aos-delay="300">
 						<!-- Slides -->
 						<div class="swiper-slide programs-slide">
 							<img src="img/programs/program-1.jpg" alt="icon: program" class="programs-slide__img">
@@ -144,10 +144,10 @@
 
 			<section class="sertificate">
 				<div class="_container">
-					<h2 class="title sertificate__title">Примеры допусков и сертификатов</h2>
+					<h2 class="title sertificate__title" data-aos="zoom-in" data-aos-delay="200">Примеры допусков и сертификатов</h2>
 
 					<div class="sertificate__wrapper">
-						<div class="sertificate-slider _swiper">
+						<div class="sertificate-slider _swiper" data-aos="zoom-in" data-aos-delay="300">
 							<div class="swiper-slide sertificate-slide">
 								<img src="img/sertificate/sertificate-1.jpg" alt="Image: sertificate" class="sertificate-slide__img">
 							</div>
@@ -169,9 +169,9 @@
 
 			<section class="news">
 				<div class="_container">
-					<h2 class="title news__title">Новости и акции</h2>
+					<h2 class="title news__title" data-aos="zoom-in" data-aos-delay="200">Новости и акции</h2>
 					<div class="news__wrapper">
-						<div class="news-stock">
+						<div class="news-stock" data-aos="fade-up" data-aos-delay="300">
 							<div class="news-stock__body">
 								<h3 class="news-stock__title">Получи в подарок удостоверение абсолютно <span>бесплатно</span></h3>
 								<p class="news-stock__decs">каждое 5-е удостоверение мы выдаем в подарок. Акция рассчитана на
@@ -181,20 +181,20 @@
 								<img src="img/news/stock.png" alt="Image: stock">
 							</div>
 						</div>
-						<div class="news-item">
+						<div class="news-item" data-aos="fade-up" data-aos-delay="400">
 							<img src="img/news/news-1.jpg" alt="image: news" class="news-item__img">
 							<span class="news-item__date">02.07.2021</span>
 							<h3 class="news-item__title">Изменения в системе гражданской обороны</h3>
 							<p class="news-item__desc">Государство планирует реализовать значительные улучшения в сфере…</p>
 						</div>
-						<div class="news-item news-item_second">
+						<div class="news-item news-item_second" data-aos="fade-up" data-aos-delay="500">
 							<img src="img/news/news-2.jpg" alt="image: news" class="news-item__img">
 							<span class="news-item__date">03.07.2021</span>
 							<h3 class="news-item__title">Строители планируют построение здания</h3>
 							<p class="news-item__desc">Государственные сторителт планируют построение новых зданий ближе к…</p>
 						</div>
 					</div>
-					<div class="news__btn">Все новости</div>
+					<div class="news__btn" data-aos="fade-up" data-aos-delay="400">Все новости</div>
 				</div>
 			</section>
 		</main>
