--- a/OFDR/index.html
+++ b/OFDR/index.html
@@ -16,18 +16,18 @@
 		<header class="header">
 	<div class="header__container _container">
 		<div class="header-main">
-			<a href="index.html" class="header-main__logo">OFDR</a>
-			<p class="header-main__desc">центр профессиональной дистанционной
+			<a href="index.html" class="header-main__logo" data-aos="fade-down" data-aos-delay="100">OFDR</a>
+			<p class="header-main__desc" data-aos="fade-down" data-aos-delay="300">центр профессиональной дистанционной
 				переподготовки кадров</p>
 			<div class="social">
-				<a href="#" class="social__link social__whatsapp">
+				<a href="#" class="social__link social__whatsapp" data-aos="fade-down" data-aos-delay="200">
 					<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path fill-rule="evenodd" clip-rule="evenodd"
 							d="M18 8.7682C18 13.6108 14.0442 17.5364 9.1636 17.5364C7.6142 17.5364 6.1586 17.1404 4.8922 16.4454L0 18L1.595 13.2956C0.7904 11.9744 0.327 10.4248 0.327 8.7682C0.327 3.9256 4.2832 0 9.1636 0C14.0446 0 18 3.9256 18 8.7682ZM9.1636 1.3964C5.0668 1.3964 1.7344 4.7034 1.7344 8.7682C1.7344 10.3812 2.2602 11.875 3.1496 13.0902L2.2214 15.828L5.0764 14.9206C6.2494 15.6908 7.6546 16.14 9.1638 16.14C13.26 16.14 16.593 12.8334 16.593 8.7686C16.593 4.7038 13.2602 1.3964 9.1636 1.3964ZM13.3279 10.5937C13.4794 10.6664 13.5818 10.7155 13.6258 10.7876C13.6796 10.8772 13.6796 11.3074 13.4996 11.8098C13.3184 12.3114 12.434 12.7954 12.0372 12.8312C11.9692 12.8374 11.9128 12.8509 11.855 12.8648C11.5754 12.9319 11.2628 13.0069 9.4378 12.294C7.40286 11.4987 6.06155 9.52466 5.78435 9.11669C5.76159 9.0832 5.74601 9.06026 5.7378 9.0494L5.73744 9.04892C5.62748 8.90394 4.8534 7.88323 4.8534 6.8268C4.8534 5.83741 5.34316 5.31851 5.56868 5.07957C5.58419 5.06314 5.59844 5.04804 5.6112 5.0342C5.8098 4.8192 6.0446 4.7654 6.189 4.7654C6.26363 4.7654 6.33832 4.77021 6.41049 4.77485C6.47795 4.7792 6.54322 4.7834 6.6042 4.7834C6.61934 4.7834 6.63525 4.78238 6.65184 4.78131C6.77391 4.77345 6.93258 4.76323 7.0914 5.1418C7.14922 5.27975 7.23305 5.48213 7.32206 5.697C7.51075 6.15253 7.72271 6.66422 7.7594 6.7372C7.8138 6.845 7.85 6.9704 7.7774 7.1138C7.76709 7.13443 7.75751 7.15394 7.74835 7.1726C7.69376 7.28383 7.654 7.36484 7.561 7.4724C7.52515 7.51395 7.48808 7.55871 7.451 7.6035C7.37617 7.69387 7.30126 7.78434 7.236 7.8488C7.1278 7.9558 7.0148 8.072 7.141 8.287C7.2674 8.5024 7.7022 9.2056 8.346 9.7752C9.03856 10.3879 9.64031 10.6469 9.94496 10.7781C10.0043 10.8036 10.0523 10.8243 10.0876 10.8418C10.3044 10.9494 10.4306 10.9314 10.557 10.7876C10.6836 10.6442 11.0988 10.1604 11.243 9.9452C11.3872 9.7302 11.532 9.7662 11.7306 9.8378C11.9286 9.9092 12.9938 10.4294 13.2106 10.5368C13.2524 10.5576 13.2916 10.5763 13.3279 10.5937Z"
 							fill="white" />
 					</svg>
 				</a>
-				<a href="#" class="social__link social__viber">
+				<a href="#" class="social__link social__viber" data-aos="fade-down" data-aos-delay="300">
 					<svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path
 							d="M17.0789 2.12558C15.4992 0.653148 12.9453 -0.0603014 9.48679 0.00398691C5.9995 0.069196 3.66841 0.651139 2.15077 1.83545C0.683408 2.98042 0 4.65585 0 7.10809V9.61082C0 12.5058 1.63166 15.6885 4.75013 16.1701C5.11015 16.2261 5.4493 15.9934 5.50776 15.651C5.56622 15.3088 5.32181 14.9863 4.96179 14.9307C2.59681 14.5654 1.32068 11.9172 1.32068 9.61082V7.10809C1.32068 3.59183 2.6911 1.38685 9.51268 1.25928C12.6053 1.20102 14.8374 1.7946 16.1542 3.0221C17.1804 3.97881 17.6792 5.3153 17.6792 7.10809V9.61082C17.6792 13.4006 15.8901 15.0722 11.3011 15.5644H8.04716C7.87204 15.5644 7.70405 15.6306 7.58026 15.7483L5.28747 17.9282C5.02959 18.1734 5.02959 18.5709 5.28747 18.8161C5.41637 18.9386 5.58542 19 5.75438 19C5.92334 19 6.09238 18.9387 6.22128 18.8161L8.32072 16.8201H11.338C11.3623 16.8201 11.3867 16.8188 11.4109 16.8162C14.0372 16.5389 15.8356 15.8891 17.0704 14.771C18.3688 13.5954 19 11.9075 19 9.61073V7.10809C19 4.99035 18.3537 3.314 17.0789 2.12558Z"
@@ -43,7 +43,7 @@
 							fill="white" />
 					</svg>
 				</a>
-				<a href="#" class="social__link social__telegram">
+				<a href="#" class="social__link social__telegram" data-aos="fade-down" data-aos-delay="400">
 					<svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path fill-rule="evenodd" clip-rule="evenodd"
 							d="M3.96933 8.0958L0.282608 6.71295C-0.0918463 6.57193 -0.0950996 6.04066 0.278288 5.89594L15.4087 0.0300401C15.7295 -0.0946306 16.0604 0.187781 15.9906 0.526311L13.2753 13.6522C13.2113 13.9621 12.8498 14.1026 12.5946 13.9162L8.88801 11.2118C8.66288 11.0475 8.35606 11.0563 8.14064 11.2327L6.0856 12.9164C5.84704 13.1124 5.48763 13.0032 5.39632 12.7078L3.96933 8.0958ZM12.8005 3.01974L5.35628 7.37763C5.07096 7.54501 4.93662 7.87251 5.02881 8.1791L5.83369 10.8672C5.89083 11.0577 6.18172 11.0381 6.20944 10.8413L6.41872 9.36721C6.45817 9.08968 6.59747 8.83399 6.81342 8.64293L12.9571 3.21489C13.072 3.1136 12.9343 2.94165 12.8005 3.01974Z"
@@ -52,29 +52,29 @@
 				</a>
 			</div>
 			<div class="header-contacts">
-				<a href="tel:88000000000" class="header-contacts__phone">8 800 000-00-00</a>
-				<a href="mailto:email@email.com" class="header-contacts__email">email@email.com</a>
+				<a href="tel:88000000000" class="header-contacts__phone" data-aos="fade-down" data-aos-delay="400">8 800 000-00-00</a>
+				<a href="mailto:email@email.com" class="header-contacts__email" data-aos="fade-down" data-aos-delay="500">email@email.com</a>
 			</div>
-			<button class="btn header-main__btn">Заказать звонок</button>
+			<button class="btn header-main__btn" data-aos="fade-down" data-aos-delay="600">Заказать звонок</button>
 		</div>
 		<nav class="header-nav">
 			<ul class="header-nav__list">
-				<li class="header-nav__item">
+				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="100">
 					<a href="#" class="header-nav__link">Курсы</a>
 				</li>
-				<li class="header-nav__item">
+				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="200">
 					<a href="#" class="header-nav__link">Aттестация</a>
 				</li>
-				<li class="header-nav__item">
+				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="300">
 					<a href="#" class="header-nav__link">Охрана труда</a>
 				</li>
-				<li class="header-nav__item">
+				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="400">
 					<a href="#" class="header-nav__link">Пожарная безопасность</a>
 				</li>
-				<li class="header-nav__item">
+				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="500">
 					<a href="#" class="header-nav__link">Свидетельство допог</a>
 				</li>
-				<li class="header-nav__item">
+				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="600">
 					<a href="#" class="header-nav__link">Права на спецтехнику</a>
 				</li>
 			</ul>
@@ -111,7 +111,7 @@
 				</a>
 			</div>
 		</nav>
-		<div class="icon-menu">
+		<div class="icon-menu" data-aos="fade-down" data-aos-delay="300">
 			<span></span>
 			<span></span>
 			<span></span>
@@ -121,12 +121,12 @@
 		<div class="_container">
 			<div class="promo__wrapper">
 				<div class="promo-body">
-					<h1 class="promo-body__title">Оформление допусков, удостоверений всех строительных и рабочих
+					<h1 class="promo-body__title" data-aos="fade-right" data-aos-delay="300">Оформление допусков, удостоверений всех строительных и рабочих
 						специальностей</h1>
-					<p class="promo-body__desc">аттестация ИТР <span>от&nbsp;2&nbsp;500&nbsp;руб</span></p>
-					<button class="promo-body__btn">Заказать</button>
+					<p class="promo-body__desc" data-aos="fade-right" data-aos-delay="400">аттестация ИТР <span>от&nbsp;2&nbsp;500&nbsp;руб</span></p>
+					<button class="promo-body__btn" data-aos="fade-right" data-aos-delay="500">Заказать</button>
 				</div>
-				<div class="promo-img">
+				<div class="promo-img" data-aos="zoom-in" data-aos-delay="200">
 					<img src="img/promo/promo-main.png" alt="image: worker">
 				</div>
 			</div>
@@ -136,54 +136,54 @@
 		<main class="page">
 			<section class="documents">
 				<div class="_container">
-					<h2 class="title documents__title">Какие документы хотите оформить?</h2>
+					<h2 class="title documents__title" data-aos="zoom-in" data-aos-delay="200">Какие документы хотите оформить?</h2>
 
 					<div class="documents__wrapper">
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="200">
 							<img src="img/documents/fireman.svg" alt="Icon: fireman" class="documents-item__icon">
 							<h3 class="documents-item__title">Гражданская оборона и ЧС</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="250">
 							<img src="img/documents/crane.svg" alt="Icon: crane" class="documents-item__icon">
 							<h3 class="documents-item__title">Работы на <br> высоте</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="300">
 							<img src="img/documents/excavator.svg" alt="Icon: excavator" class="documents-item__icon">
 							<h3 class="documents-item__title">Дорожно-строительная техника</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="350">
 							<img src="img/documents/settings.svg" alt="Icon: settings" class="documents-item__icon">
 							<h3 class="documents-item__title">Неразрушающий контроль</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="400">
 							<img src="img/documents/toxic-waste.svg" alt="Icon: toxic-waste" class="documents-item__icon">
 							<h3 class="documents-item__title">Опасные грузы (ДОПОГ)</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="450">
 							<img src="img/documents/worker.svg" alt="Icon: worker" class="documents-item__icon">
 							<h3 class="documents-item__title">Охрана труда</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="500">
 							<img src="img/documents/fire-extinguisher.svg" alt="Icon: fire-extinguisher" class="documents-item__icon">
 							<h3 class="documents-item__title">Пожарно-технический минимум</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="550">
 							<img src="img/documents/factory.svg" alt="Icon: factory" class="documents-item__icon">
 							<h3 class="documents-item__title">Промышленная безопасность</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="600">
 							<img src="img/documents/engineer.svg" alt="Icon: engineer" class="documents-item__icon">
 							<h3 class="documents-item__title">Обучение по рабочим профессиям</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="650">
 							<img src="img/documents/plug.svg" alt="Icon: plug" class="documents-item__icon">
 							<h3 class="documents-item__title">Энергетическая безопасность</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="700">
 							<img src="img/documents/curve.svg" alt="Icon: curve" class="documents-item__icon">
 							<h3 class="documents-item__title">Безопасность дорожного движения</h3>
 						</div>
-						<div class="documents-item">
+						<div class="documents-item" data-aos="fade-up" data-aos-delay="750">
 							<img src="img/documents/tracktor.svg" alt="Icon: tracktor" class="documents-item__icon">
 							<h3 class="documents-item__title">Права на спецтехнику</h3>
 						</div>
@@ -193,30 +193,30 @@
 
 			<section class="guarantees">
 				<div class="_container">
-					<h2 class="title guarantees__title">Какие гарантии вы получаете?</h2>
+					<h2 class="title guarantees__title" data-aos="zoom-in" data-aos-delay="200">Какие гарантии вы получаете?</h2>
 					<div class="guarantees__wrapper">
-						<div class="guarantees-item">
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="200">
 							<div class="guarantees-item__icon">
 								<img src="img/guarantees/doc.svg" alt="Icon: document">
 							</div>
 							<h3 class="guarantees-item__title">Документы в срок</h3>
 							<p class="guarantees-item__desc">Мы четко соблюдаем сроки, так как дорожим вашим временем</p>
 						</div>
-						<div class="guarantees-item">
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="300">
 							<div class="guarantees-item__icon">
 								<img src="img/guarantees/favorites.svg" alt="Icon: favorite">
 							</div>
 							<h3 class="guarantees-item__title">100% качество <br> наших услуг</h3>
 							<p class="guarantees-item__desc">Мы несем полную ответственность за свою работу</p>
 						</div>
-						<div class="guarantees-item">
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="400">
 							<div class="guarantees-item__icon">
 								<img src="img/guarantees/file.svg" alt="Icon: file">
 							</div>
 							<h3 class="guarantees-item__title">Гарантия подлинности документов</h3>
 							<p class="guarantees-item__desc">У нас есть все необходимые лицензии и&nbsp;сертификаты</p>
 						</div>
-						<div class="guarantees-item">
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="500">
 							<div class="guarantees-item__icon">
 								<img src="img/guarantees/delivery-truck.svg" alt="Icon: delivery-truck">
 							</div>
@@ -229,8 +229,8 @@
 
 			<section class="programs">
 				<div class="_container">
-					<h2 class="title programs__title">Образовательные программы</h2>
-					<div class="programs-slider _swiper">
+					<h2 class="title programs__title" data-aos="zoom-in" data-aos-delay="200">Образовательные программы</h2>
+					<div class="programs-slider _swiper" data-aos="zoom-in" data-aos-delay="300">
 						<!-- Slides -->
 						<div class="swiper-slide programs-slide">
 							<img src="img/programs/program-1.jpg" alt="icon: program" class="programs-slide__img">
@@ -270,10 +270,10 @@
 
 			<section class="sertificate">
 				<div class="_container">
-					<h2 class="title sertificate__title">Примеры допусков и сертификатов</h2>
+					<h2 class="title sertificate__title" data-aos="zoom-in" data-aos-delay="200">Примеры допусков и сертификатов</h2>
 
 					<div class="sertificate__wrapper">
-						<div class="sertificate-slider _swiper">
+						<div class="sertificate-slider _swiper" data-aos="zoom-in" data-aos-delay="300">
 							<div class="swiper-slide sertificate-slide">
 								<img src="img/sertificate/sertificate-1.jpg" alt="Image: sertificate" class="sertificate-slide__img">
 							</div>
@@ -295,9 +295,9 @@
 
 			<section class="news">
 				<div class="_container">
-					<h2 class="title news__title">Новости и акции</h2>
+					<h2 class="title news__title" data-aos="zoom-in" data-aos-delay="200">Новости и акции</h2>
 					<div class="news__wrapper">
-						<div class="news-stock">
+						<div class="news-stock" data-aos="fade-up" data-aos-delay="300">
 							<div class="news-stock__body">
 								<h3 class="news-stock__title">Получи в подарок удостоверение абсолютно <span>бесплатно</span></h3>
 								<p class="news-stock__decs">каждое 5-е удостоверение мы выдаем в подарок. Акция рассчитана на
@@ -307,27 +307,27 @@
 								<img src="img/news/stock.png" alt="Image: stock">
 							</div>
 						</div>
-						<div class="news-item">
+						<div class="news-item" data-aos="fade-up" data-aos-delay="400">
 							<img src="img/news/news-1.jpg" alt="image: news" class="news-item__img">
 							<span class="news-item__date">02.07.2021</span>
 							<h3 class="news-item__title">Изменения в системе гражданской обороны</h3>
 							<p class="news-item__desc">Государство планирует реализовать значительные улучшения в сфере…</p>
 						</div>
-						<div class="news-item news-item_second">
+						<div class="news-item news-item_second" data-aos="fade-up" data-aos-delay="500">
 							<img src="img/news/news-2.jpg" alt="image: news" class="news-item__img">
 							<span class="news-item__date">03.07.2021</span>
 							<h3 class="news-item__title">Строители планируют построение здания</h3>
 							<p class="news-item__desc">Государственные сторителт планируют построение новых зданий ближе к…</p>
 						</div>
 					</div>
-					<div class="news__btn">Все новости</div>
+					<div class="news__btn" data-aos="fade-up" data-aos-delay="400">Все новости</div>
 				</div>
 			</section>
 		</main>
 		<footer class="footer">
 	<div class="footer__container _container">
 		<div class="footer__wrapper">
-			<div class="footer-services">
+			<div class="footer-services" data-aos="fade-right" data-aos-delay="200">
 				<h3 class="footer__title">Страницы с услугами</h3>
 				<ul class="footer-list">
 					<li class="footer-list__item">
@@ -350,7 +350,7 @@
 					</li>
 				</ul>
 			</div>
-			<div class="footer-menu">
+			<div class="footer-menu" data-aos="fade-right" data-aos-delay="300">
 				<h3 class="footer__title">Меню сайта</h3>
 				<ul class="footer-list">
 					<li class="footer-list__item">
@@ -373,7 +373,7 @@
 					</li>
 				</ul>
 			</div>
-			<div class="footer-contacts">
+			<div class="footer-contacts" data-aos="fade-right" data-aos-delay="400">
 				<h3 class="footer__title">Напишите нам</h3>
 				<div class="footer-contacts__wrapper">
 					<div class="footer-contacts__social">
