created: attestation page + adap, anim, decoration

--- a/#src/_header-second.html
+++ b/#src/_header-second.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header-second">
 	<div class="header__container _container">
 		<div class="header-main">
 			<a href="index.html" class="header-main__logo" data-aos="fade-down" data-aos-delay="100">OFDR</a>
@@ -104,21 +104,4 @@
 			<span></span>
 		</div>
 	</div>
-	<section class="promo">
-		<div class="_container">
-			<div class="promo__wrapper">
-				<div class="promo-body">
-					<h1 class="promo-body__title" data-aos="fade-right" data-aos-delay="300">Оформление допусков, удостоверений
-						всех строительных и рабочих
-						специальностей</h1>
-					<p class="promo-body__desc" data-aos="fade-right" data-aos-delay="400">аттестация ИТР
-						<span>от&nbsp;2&nbsp;500&nbsp;руб</span></p>
-					<button class="promo-body__btn" data-aos="fade-right" data-aos-delay="500">Заказать</button>
-				</div>
-				<div class="promo-img" data-aos="zoom-in" data-aos-delay="200">
-					<img src="img/promo/promo-main.png" alt="image: worker">
-				</div>
-			</div>
-		</div>
-	</section>
 </header>
