--- a/#src/index.html
+++ b/#src/index.html
@@ -10,7 +10,8 @@
 		<main class="page">
 			<section class="documents">
 				<div class="_container">
-					<h2 class="title documents__title" data-aos="zoom-in" data-aos-delay="200">Какие документы хотите оформить?</h2>
+					<h2 class="title documents__title" data-aos="zoom-in" data-aos-delay="200">Какие документы хотите оформить?
+					</h2>
 
 					<div class="documents__wrapper">
 						<div class="documents-item" data-aos="fade-up" data-aos-delay="200">
@@ -144,7 +145,8 @@
 
 			<section class="sertificate">
 				<div class="_container">
-					<h2 class="title sertificate__title" data-aos="zoom-in" data-aos-delay="200">Примеры допусков и сертификатов</h2>
+					<h2 class="title sertificate__title" data-aos="zoom-in" data-aos-delay="200">Примеры допусков и сертификатов
+					</h2>
 
 					<div class="sertificate__wrapper">
 						<div class="sertificate-slider _swiper" data-aos="zoom-in" data-aos-delay="300">
