--- a/OFDR/attestation.html
+++ b/OFDR/attestation.html
@@ -1,4 +1,19 @@
-<header class="header">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<title>Аттестация</title>
+	<meta charset="UTF-8">
+	<meta name="format-detection" content="telephone=no">
+	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="shortcut icon" href="favicon.ico">
+	<!-- <meta name="robots" content="noindex, nofollow"> -->
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+	<div class="wrapper">
+		<header class="header-second">
 	<div class="header__container _container">
 		<div class="header-main">
 			<a href="index.html" class="header-main__logo" data-aos="fade-down" data-aos-delay="100">OFDR</a>
@@ -104,21 +119,206 @@
 			<span></span>
 		</div>
 	</div>
-	<section class="promo">
-		<div class="_container">
-			<div class="promo__wrapper">
-				<div class="promo-body">
-					<h1 class="promo-body__title" data-aos="fade-right" data-aos-delay="300">Оформление допусков, удостоверений
-						всех строительных и рабочих
-						специальностей</h1>
-					<p class="promo-body__desc" data-aos="fade-right" data-aos-delay="400">аттестация ИТР
-						<span>от&nbsp;2&nbsp;500&nbsp;руб</span></p>
-					<button class="promo-body__btn" data-aos="fade-right" data-aos-delay="500">Заказать</button>
+</header>
+		<main class="page">
+			<section class="attestation">
+				<div class="_container">
+					<div class="attestation__wrapper">
+						<div class="attestation-price" data-aos="zoom-in" data-aos-delay="200">
+							<span class="attestation-price__text">Стоимость аттестации</span>
+							<span class="attestation-price__count">3000 ₽</span>
+							<div class="attestation-price__divider"></div>
+							<span class="attestation-price__text">Оформление <span>1 день</span></span>
+							<div class="attestation-price__date">
+								<span class="attestation-price__text">Срок действия </span>
+								<span class="attestation-price__text">I, II, III, IV группы <span>1 год</span></span>
+								<span class="attestation-price__text">V группа 1 или <span>3 года</span></span>
+							</div>
+							<button class="btn attestation-price__btn">Заказать</button>
+						</div>
+						<div class="attestation-desc" data-aos="zoom-in" data-aos-delay="300">
+							<h2 class="attestation-desc__title">Аттестация по электробезопасности</h2>
+							<p class="attestation-desc__text">На все группы допуска до и свыше 1000В с отметкой ГосТехНадзора. Вместе
+								с удостоверением Вы получаете протокол
+								экзаменационной комиссии РосТехНадзора.</p>
+						</div>
+						<div class="attestation-img" data-aos="zoom-in" data-aos-delay="400">
+							<img src="img/attestation/attestation-main.png" alt="image: attestation">
+						</div>
+					</div>
+					<p class="attestation__desc attestation__about" data-aos="fade-right" data-aos-delay="300">Обучение по электробезопасности персонала - обязательное
+						условие для
+						предприятий, чьи сотрудники работают с
+						электричеством и электрическим оборудованием.</p>
+					<div class="attestation-study" data-aos="fade-right" data-aos-delay="400">
+						<h3 class="attestation-study__title">Кому необходимо проходить обучение?</h3>
+						<p class="attestation__desc attestation-study__desc">Lorem Ipsum - это текст-"рыба", часто используемый в
+							печати и
+							вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
+							текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию
+							размеров и форм
+							шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных
+							изменений пять веков, но и перешагнул в электронный дизайн.</p>
+					</div>
+
+					<div class="attestation-must" data-aos="fade-right" data-aos-delay="500">
+						<h3 class="attestation-must__title">Таким образом, повышение квалификации обязаны проходить:</h3>
+						<ul class="attestation-must__list">
+							<li class="attestation-must__item">
+								<p class="attestation-must__text">Сотрудники, впервые поступающим на работу, связанную с обслуживанием
+									электрооборудования;</p>
+							</li>
+							<li class="attestation-must__item">
+								<p class="attestation-must__text">Работники, не проходившие проверки знаний 3 года и более;</p>
+							</li>
+							<li class="attestation-must__item">
+								<p class="attestation-must__text">Сотрудники, претендующие на повышение группы допуска;</p>
+							</li>
+							<li class="attestation-must__item">
+								<p class="attestation-must__text">Неэлектротехнический персонал, деятельность которого прямо или
+									косвенно связана с обслуживанием установок.</p>
+							</li>
+						</ul>
+					</div>
 				</div>
-				<div class="promo-img" data-aos="zoom-in" data-aos-delay="200">
-					<img src="img/promo/promo-main.png" alt="image: worker">
+			</section>
+
+			<section class="guarantees">
+				<div class="_container">
+					<h2 class="title guarantees__title" data-aos="zoom-in" data-aos-delay="200">Какие гарантии вы получаете?</h2>
+					<div class="guarantees__wrapper">
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="200">
+							<div class="guarantees-item__icon">
+								<img src="img/guarantees/doc.svg" alt="Icon: document">
+							</div>
+							<h3 class="guarantees-item__title">Документы в срок</h3>
+							<p class="guarantees-item__desc">Мы четко соблюдаем сроки, так как дорожим вашим временем</p>
+						</div>
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="300">
+							<div class="guarantees-item__icon">
+								<img src="img/guarantees/favorites.svg" alt="Icon: favorite">
+							</div>
+							<h3 class="guarantees-item__title">100% качество <br> наших услуг</h3>
+							<p class="guarantees-item__desc">Мы несем полную ответственность за свою работу</p>
+						</div>
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="400">
+							<div class="guarantees-item__icon">
+								<img src="img/guarantees/file.svg" alt="Icon: file">
+							</div>
+							<h3 class="guarantees-item__title">Гарантия подлинности документов</h3>
+							<p class="guarantees-item__desc">У нас есть все необходимые лицензии и&nbsp;сертификаты</p>
+						</div>
+						<div class="guarantees-item" data-aos="fade-up" data-aos-delay="500">
+							<div class="guarantees-item__icon">
+								<img src="img/guarantees/delivery-truck.svg" alt="Icon: delivery-truck">
+							</div>
+							<h3 class="guarantees-item__title">Гарантия быстрой доставки по всей России.</h3>
+							<p class="guarantees-item__desc">Доставляем в любой город России</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+		</main>
+		<footer class="footer">
+	<div class="footer__container _container">
+		<div class="footer__wrapper">
+			<div class="footer-services" data-aos="fade-right" data-aos-delay="200">
+				<h3 class="footer__title">Страницы с услугами</h3>
+				<ul class="footer-list">
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Основные сведения</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Структура и органы управления образовательной организацией</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Документы</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Образование</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Руководство</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Персональный состав педагогических работников</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer-menu" data-aos="fade-right" data-aos-delay="300">
+				<h3 class="footer__title">Меню сайта</h3>
+				<ul class="footer-list">
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Вакантные места для приема (перевода)</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Сотрудники</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Об Учебном комбинате</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Отзывы</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Реквизиты</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Отчеты АО «Учебный комбинат»</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer-contacts" data-aos="fade-right" data-aos-delay="400">
+				<h3 class="footer__title">Напишите нам</h3>
+				<div class="footer-contacts__wrapper">
+					<div class="footer-contacts__social">
+						<a href="#" class="footer-contacts__link footer-contacts__link_telegram" target="_blank">telegram_name</a>
+						<a href="#" class="footer-contacts__link footer-contacts__link_viber" target="_blank">viber_name</a>
+						<a href="#" class="footer-contacts__link footer-contacts__link_whatsapp" target="_blank">whatsapp_name</a>
+					</div>
+					<div class="footer-contacts__contact">
+						<a href="tel:88000000000" class="footer-contacts__phone">8 800 000-00-00</a>
+						<a href="mailto:email@email.com" class="footer-contacts__email">email@email.com</a>
+						<a href="https://kasper-developer.ru" class="footer-contacts__site" target="_blank">Сайт разработан: kasper&nbsp;-&nbsp;developer.ru</a>
+					</div>
+					<button class="btn footer-contacts__btn">Обратный звонок</button>
 				</div>
 			</div>
 		</div>
-	</section>
-</header>
+		<div class="footer__divider"></div>
+		<div class="footer__copyright">Copyright 2021. Все права защищены</div>
+	</div>
+</footer>
+	</div>
+	<div class="popup popup_popup">
+	<div class="popup__content">
+		<div class="popup__body">
+			<div class="popup__close"></div>
+		</div>
+	</div>
+</div>
+<div class="popup popup_massagename-message">
+	<div class="popup__content">
+		<div class="popup__body">
+			<div class="popup__close"></div>
+		</div>
+	</div>
+</div>
+<div class="popup popup_video">
+	<div class="popup__content">
+		<div class="popup__body">
+			<div class="popup__close popup__close_video"></div>
+			<div class="popup__video _video"></div>
+		</div>
+	</div>
+</div>
+
+	<!-- Swiper -->
+<!-- <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script> -->
+<script src="js/vendors.min.js"></script>
+<script src="js/app.min.js"></script>
+</body>
+
+</html>
