--- a/#src/_head.html
+++ b/#src/_head.html
@@ -1,5 +1,5 @@
 <head>
-	<title>OFDR</title>
+	<title>@@title</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.min.css">
