create: news page + adap, anim + favicon for site

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -47,22 +47,22 @@
 		<nav class="header-nav">
 			<ul class="header-nav__list">
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="100">
-					<a href="attestation.html" class="header-nav__link">Aттестация</a>
+					<a href="attestation.html" class="header-nav__link" target="_blank">Aттестация</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="200">
-					<a href="#" class="header-nav__link">Курсы</a>
+					<a href="#" class="header-nav__link" target="_blank">Курсы</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="300">
-					<a href="#" class="header-nav__link">Охрана труда</a>
+					<a href="#" class="header-nav__link" target="_blank">Охрана труда</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="400">
-					<a href="#" class="header-nav__link">Пожарная безопасность</a>
+					<a href="#" class="header-nav__link" target="_blank">Пожарная безопасность</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="500">
-					<a href="#" class="header-nav__link">Свидетельство допог</a>
+					<a href="#" class="header-nav__link" target="_blank">Свидетельство допог</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="600">
-					<a href="#" class="header-nav__link">Права на спецтехнику</a>
+					<a href="#" class="header-nav__link" target="_blank">Права на спецтехнику</a>
 				</li>
 			</ul>
 			<div class="social">
