--- a/#src/index.html
+++ b/#src/index.html
@@ -193,10 +193,10 @@
 							<img src="img/news/news-2.jpg" alt="image: news" class="news-item__img">
 							<span class="news-item__date">03.07.2021</span>
 							<h3 class="news-item__title">Строители планируют построение здания</h3>
-							<p class="news-item__desc">Государственные сторителт планируют построение новых зданий ближе к…</p>
+							<p class="news-item__desc">Государственные сторители планируют построение новых зданий ближе к…</p>
 						</div>
 					</div>
-					<div class="news__btn" data-aos="fade-up" data-aos-delay="400">Все новости</div>
+					<a href="news.html" class="news__btn" data-aos="fade-up" data-aos-delay="400">Все новости</a>
 				</div>
 			</section>
 		</main>
