--- a/OFDR/index.html
+++ b/OFDR/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,22 +62,22 @@
 		<nav class="header-nav">
 			<ul class="header-nav__list">
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="100">
-					<a href="attestation.html" class="header-nav__link">Aттестация</a>
+					<a href="attestation.html" class="header-nav__link" target="_blank">Aттестация</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="200">
-					<a href="#" class="header-nav__link">Курсы</a>
+					<a href="#" class="header-nav__link" target="_blank">Курсы</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="300">
-					<a href="#" class="header-nav__link">Охрана труда</a>
+					<a href="#" class="header-nav__link" target="_blank">Охрана труда</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="400">
-					<a href="#" class="header-nav__link">Пожарная безопасность</a>
+					<a href="#" class="header-nav__link" target="_blank">Пожарная безопасность</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="500">
-					<a href="#" class="header-nav__link">Свидетельство допог</a>
+					<a href="#" class="header-nav__link" target="_blank">Свидетельство допог</a>
 				</li>
 				<li class="header-nav__item" data-aos="fade-down" data-aos-delay="600">
-					<a href="#" class="header-nav__link">Права на спецтехнику</a>
+					<a href="#" class="header-nav__link" target="_blank">Права на спецтехнику</a>
 				</li>
 			</ul>
 			<div class="social">
@@ -323,10 +323,10 @@
 							<img src="img/news/news-2.jpg" alt="image: news" class="news-item__img">
 							<span class="news-item__date">03.07.2021</span>
 							<h3 class="news-item__title">Строители планируют построение здания</h3>
-							<p class="news-item__desc">Государственные сторителт планируют построение новых зданий ближе к…</p>
+							<p class="news-item__desc">Государственные сторители планируют построение новых зданий ближе к…</p>
 						</div>
 					</div>
-					<div class="news__btn" data-aos="fade-up" data-aos-delay="400">Все новости</div>
+					<a href="news.html" class="news__btn" data-aos="fade-up" data-aos-delay="400">Все новости</a>
 				</div>
 			</section>
 		</main>
