--- a/OFDR/news.html
+++ b/OFDR/news.html
@@ -1,4 +1,19 @@
-<header class="header-second">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<title>Новости</title>
+	<meta charset="UTF-8">
+	<meta name="format-detection" content="telephone=no">
+	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+	<!-- <meta name="robots" content="noindex, nofollow"> -->
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+	<div class="wrapper">
+		<header class="header-second">
 	<div class="header__container _container">
 		<div class="header-main">
 			<a href="index.html" class="header-main__logo" data-aos="fade-down" data-aos-delay="100">OFDR</a>
@@ -105,3 +120,178 @@
 		</div>
 	</div>
 </header>
+		<main class="page">
+
+			<div class="news-breadcrumb breadcrumb">
+				<div class="_container">
+					<a href="index.html" class="breadcrumb__link">Главная </a><a href="news.html"
+						class="breadcrumb__link breadcrumb__link_active">- Новости</a>
+				</div>
+			</div>
+
+			<section class="news">
+				<div class="_container">
+					<h2 class="title news__title" data-aos="zoom-in" data-aos-delay="200">Новости</h2>
+					<div class="news-wrap">
+						<div class="news-item" data-aos="fade-up" data-aos-delay="300">
+							<img src="img/news/news-1.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">02.07.2021</span>
+							<h3 class="news-item__title">Изменения в системе гражданской обороны</h3>
+							<p class="news-item__desc">Государство планирует реализовать значительные улучшения в сфере…</p>
+						</div>
+						<div class="news-item" data-aos="fade-up" data-aos-delay="350">
+							<img src="img/news/news-2.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">02.07.2021</span>
+							<h3 class="news-item__title">Строители планируют построение здания</h3>
+							<p class="news-item__desc">Государственные сторители планируют построение новых зданий ближе к…</p>
+						</div>
+						<div class="news-item" data-aos="fade-up" data-aos-delay="400">
+							<img src="img/news/news-3.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">03.07.2021</span>
+							<h3 class="news-item__title">Электричество не будет прежним</h3>
+							<p class="news-item__desc">Вот почему электричество изменится и не будет прежним…</p>
+						</div>
+						<div class="news-item" data-aos="fade-up" data-aos-delay="450">
+							<img src="img/news/news-4.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">03.07.2021</span>
+							<h3 class="news-item__title">Схемы постройки нового здания "Эко+"</h3>
+							<p class="news-item__desc">Фрагменты и схемы построения здания...</p>
+						</div>
+						<div class="news-item" data-aos="fade-up" data-aos-delay="500">
+							<img src="img/news/news-5.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">03.07.2021</span>
+							<h3 class="news-item__title">Появились новинки которые вас удивят</h3>
+							<p class="news-item__desc">В продаже появились новинки которые удивят большинство людей...</p>
+						</div>
+						<div class="news-item" data-aos="fade-up" data-aos-delay="550">
+							<img src="img/news/news-6.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">04.07.2021</span>
+							<h3 class="news-item__title">Построение новой жилплощади</h3>
+							<p class="news-item__desc">Государство планирует построение большой жилплощади... </p>
+						</div>
+						<div class="news-item" data-aos="fade-up" data-aos-delay="550">
+							<img src="img/news/news-7.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">04.07.2021</span>
+							<h3 class="news-item__title">Новые приборы в области металлургии</h3>
+							<p class="news-item__desc">Весь список новых приборов в области металлургии...</p>
+						</div>
+						<div class="news-item" data-aos="fade-up" data-aos-delay="600">
+							<img src="img/news/news-8.jpg" alt="image: news" class="news-item__img">
+							<span class="news-item__date">04.07.2021</span>
+							<h3 class="news-item__title">Сборка метало-резающего стонка</h3>
+							<p class="news-item__desc">Как же собирается метало-резающий станок? <br> - Ответ прост...</p>
+						</div>
+					</div>
+					<div class="news-counter" data-aos="fade-up" data-aos-delay="400">
+						<a href="#" class="news-counter__link news-counter__link_active">1</a>
+						<a href="#" class="news-counter__link">2</a>
+						<a href="#" class="news-counter__link">3</a>
+						<a href="#" class="news-counter__link">4</a>
+						<a href="#" class="news-counter__link">5</a>
+						<a href="#" class="news-counter__link">...</a>
+						<a href="#" class="news-counter__link">12</a>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer class="footer">
+	<div class="footer__container _container">
+		<div class="footer__wrapper">
+			<div class="footer-services" data-aos="fade-right" data-aos-delay="200">
+				<h3 class="footer__title">Страницы с услугами</h3>
+				<ul class="footer-list">
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Основные сведения</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Структура и органы управления образовательной организацией</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Документы</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Образование</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Руководство</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Персональный состав педагогических работников</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer-menu" data-aos="fade-right" data-aos-delay="300">
+				<h3 class="footer__title">Меню сайта</h3>
+				<ul class="footer-list">
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Вакантные места для приема (перевода)</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Сотрудники</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Об Учебном комбинате</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Отзывы</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Реквизиты</a>
+					</li>
+					<li class="footer-list__item">
+						<a href="#" class="footer-list__link">Отчеты АО «Учебный комбинат»</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer-contacts" data-aos="fade-right" data-aos-delay="400">
+				<h3 class="footer__title">Напишите нам</h3>
+				<div class="footer-contacts__wrapper">
+					<div class="footer-contacts__social">
+						<a href="#" class="footer-contacts__link footer-contacts__link_telegram" target="_blank">telegram_name</a>
+						<a href="#" class="footer-contacts__link footer-contacts__link_viber" target="_blank">viber_name</a>
+						<a href="#" class="footer-contacts__link footer-contacts__link_whatsapp" target="_blank">whatsapp_name</a>
+					</div>
+					<div class="footer-contacts__contact">
+						<a href="tel:88000000000" class="footer-contacts__phone">8 800 000-00-00</a>
+						<a href="mailto:email@email.com" class="footer-contacts__email">email@email.com</a>
+						<a href="https://kasper-developer.ru" class="footer-contacts__site" target="_blank">Сайт разработан: kasper&nbsp;-&nbsp;developer.ru</a>
+					</div>
+					<button class="btn footer-contacts__btn">Обратный звонок</button>
+				</div>
+			</div>
+		</div>
+		<div class="footer__divider"></div>
+		<div class="footer__copyright">Copyright 2021. Все права защищены</div>
+	</div>
+</footer>
+	</div>
+	<div class="popup popup_popup">
+	<div class="popup__content">
+		<div class="popup__body">
+			<div class="popup__close"></div>
+		</div>
+	</div>
+</div>
+<div class="popup popup_massagename-message">
+	<div class="popup__content">
+		<div class="popup__body">
+			<div class="popup__close"></div>
+		</div>
+	</div>
+</div>
+<div class="popup popup_video">
+	<div class="popup__content">
+		<div class="popup__body">
+			<div class="popup__close popup__close_video"></div>
+			<div class="popup__video _video"></div>
+		</div>
+	</div>
+</div>
+
+	<!-- Swiper -->
+<!-- <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script> -->
+<script src="js/vendors.min.js"></script>
+<script src="js/app.min.js"></script>
+</body>
+
+</html>
